[metadata]
name = markdowner
version = 1.0
author = flying sheep
author-email = flying-sheep@web.de
summary = Markdown & reStructuredText editor
description-file = README.md
home-page = https://github.com/flying-sheep/markdowner
license = GPL version 3

[files]
#https://github.com/crateio/distutils2/blob/master/distutils2/_backport/sysconfig.cfg
resources =
	resources/markdownerrc = {datadir}/config
	resources/markdowner.desktop = {datadir}/applications
	resources/markdowner.svg = {icon}
	README.md = {doc}