[metadata]
name = markdowner
version = 0.1
author = flying sheep
author-email = flying-sheep@web.de
summary = Markdown & reStructuredText editor
description-file = README.md
home-page = https://github.com/flying-sheep/markdowner
license = GPL version 3

requires-dist =
	PyQt4
	PyKDE4

classifier =
	Topic :: Text Editors
	Development Status :: 4 - Beta
	Environment :: X11 Applications
	Intended Audience :: End Users/Desktop
	Operating System :: POSIX
	Programming Language :: Python :: 3.3

[files]
packages =
	markdowner

#https://github.com/crateio/distutils2/blob/master/distutils2/_backport/sysconfig.cfg
#http://techbase.kde.org/KDE_System_Administration/KDE_Filesystem_Hierarchy#Directory_Tree
resources =
	resources/markdownerrc = {datadir}/config
	resources/markdowner.desktop = {datadir}/applications
	resources/markdowner.svg = {icon}
	README.md = {doc}